--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1099,10 +1099,10 @@ body{
 	color:#61CE70;
 }
 .call-action .content .btn:before{
-	background:#61CE70;
+	background:#2C2D3F;
 }
 .call-action .content .btn:hover{
-	background:#61CE70;
+	background:#2C2D3F;
 	color:#fff;
 }
 .call-action .content .btn:last-child{
