--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -407,7 +407,7 @@ Seamlessly secure the healthcare professionals you need.</p>
 							</p>
 							<div class="button">
 								<a href="#" class="btn">Contact Now</a>
-								<a href="#" class="btn second">Learn More<i class="fa fa-long-arrow-right"></i></a>
+								<a href="#" class="btn primary">Learn More<i class="fa fa-long-arrow-right"></i></a>
 							</div>
 						</div>
 					</div>
