--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -20,8 +20,8 @@
 						<div class="col-lg-6 col-md-7 col-12">
 							<!-- Top Contact -->
 							<ul class="top-contact">
-								<li><i class="fa fa-phone"></i>+880 1234 56789</li>
-								<li><i class="fa fa-envelope"></i><a href="mailto:support@yourmail.com">support@yourmail.com</a></li>
+								<li><i class="fa fa-phone"></i>+64 22 123456</li>
+								<li><i class="fa fa-envelope"></i><a href="mailto:support@yourmail.com">info@primelocum.co.nz</a></li>
 							</ul>
 							<!-- End Top Contact -->
 						</div>
@@ -37,7 +37,9 @@
 							<div class="col-lg-3 col-md-3 col-12">
 								<!-- Start Logo -->
 								<div class="logo">
-									<a href="index.html"><img src="https://primelocum.co.nz/wp-content/uploads/2024/03/Dark-Green-and-Lime-Green-Modern-Gradient-Doctor-Health-Logo-272-x-60-px.svg" alt="#"></a>
+									<a href="index.html"><img src="{% static 'img/LOGO2.png'%}" alt="#"></a>
+									<!-- <a href="index.html"><img src="https://primelocum.co.nz/wp-content/uploads/2024/03/Dark-Green-and-Lime-Green-Modern-Gradient-Doctor-Health-Logo-272-x-60-px.svg" alt="#"></a> -->
+
 								</div>
 								<!-- End Logo -->
 								<!-- Mobile Nav -->
@@ -435,8 +437,8 @@ Seamlessly secure the healthcare professionals you need.</p>
 							<small class="fa fa-star text-secondary"></small>
 							<small class="fa fa-star text-secondary"></small>
 						</div>
-						<h5 class="mb-1">Client Name</h5>
-						<p class="m-0">Profession</p>
+						<h5 class="mb-1">Jessa</h5>
+						<p class="m-0">The Wife</p>
 					</div>
 					<div class="testimonial-item text-center">
 						<div class="testimonial-text bg-light text-center p-4 mb-4">
@@ -450,8 +452,8 @@ Seamlessly secure the healthcare professionals you need.</p>
 							<small class="fa fa-star text-secondary"></small>
 							<small class="fa fa-star text-secondary"></small>
 						</div>
-						<h5 class="mb-1">Client Name</h5>
-						<p class="m-0">Profession</p>
+						<h5 class="mb-1">Caellyne</h5>
+						<p class="m-0">Cute Baby</p>
 					</div>
 					<div class="testimonial-item text-center">
 						<div class="testimonial-text bg-light text-center p-4 mb-4">
@@ -465,8 +467,8 @@ Seamlessly secure the healthcare professionals you need.</p>
 							<small class="fa fa-star text-secondary"></small>
 							<small class="fa fa-star text-secondary"></small>
 						</div>
-						<h5 class="mb-1">Client Name</h5>
-						<p class="m-0">Profession</p>
+						<h5 class="mb-1">Christian</h5>
+						<p class="m-0">Chef</p>
 					</div>
 					<div class="testimonial-item text-center">
 						<div class="testimonial-text bg-light text-center p-4 mb-4">
@@ -480,8 +482,8 @@ Seamlessly secure the healthcare professionals you need.</p>
 							<small class="fa fa-star text-secondary"></small>
 							<small class="fa fa-star text-secondary"></small>
 						</div>
-						<h5 class="mb-1">Client Name</h5>
-						<p class="m-0">Profession</p>
+						<h5 class="mb-1">Mavelle</h5>
+						<p class="m-0">Nurse</p>
 					</div>
 					<!-- Add more testimonial items as needed -->
 				</div>
@@ -497,30 +499,19 @@ Seamlessly secure the healthcare professionals you need.</p>
 					<div class="col-lg-12 col-md-12 col-12">
 						<div class="owl-carousel clients-slider">
 							<div class="single-clients">
-								<img src="{% static 'img/client1.png' %}" alt="#">
+								<img src="https://dwvt5wwshu97q.cloudfront.net/uploads/130/portal/129/logo/schi-nav-logo.png?v=63833373652" alt="#">
 							</div>
 							<div class="single-clients">
-								<img src="{% static 'img/client2.png' %}" alt="#">
+								<img src="{% static 'img/starship.png' %}" alt="#">
 							</div>
 							<div class="single-clients">
-								<img src="{% static 'img/client1.png' %}" alt="#">3							</div>
+								<img src="{% static 'img/waitemata.png' %}" alt="#">						</div>
 							<div class="single-clients">
-								<img src="{% static 'img/client4.png' %}" alt="#">
+								<img src="{% static 'img/mercy.svg' %}" alt="#">
 							</div>
 							<div class="single-clients">
-								<img src="{% static 'img/client5.png' %}" alt="#">
+								<img src="https://www.ormistonhospital.co.nz/wp-content/uploads/2024/04/new-logo.png" alt="#">
 							</div>
-							<div class="single-clients">
-								<img src="{% static 'img/client6.png' %}" alt="#">
-							</div>
-							<div class="single-clients">
-								<img src="{% static 'img/client2.png' %}" alt="#">
-							</div>
-							<div class="single-clients">
-								<img src="{% static 'img/client3.png' %}" alt="#">
-							</div>
-							<div class="single-clients">
-								<img src="{% static 'img/client1.png' %}" alt="#">4							</div>
 						</div>
 					</div>
 				</div>
@@ -535,7 +526,7 @@ Seamlessly secure the healthcare professionals you need.</p>
 					<div class="col-lg-12">
 						<div class="section-title">
 							<h2>Engage & Recruit Top Specialists</h2>
-							<img src="{%static 'img/section-img.png'%}" alt="#">
+							<img src="{% static 'img/section-img.png'%}" alt="#">
 							<p>
 								Your Trusted Partner in Healthcare Staffing Solutions Secure your ideal staffing, seamlessly and efficiently.
 							</p>
