--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -649,7 +649,9 @@ Seamlessly secure the healthcare professionals you need.</p>
 						<div class="col-lg-3 col-md-6 col-12">
 							<div class="single-footer">
 								<h2>About Us</h2>
-								<p>Lorem ipsum dolor sit am consectetur adipisicing elit do eiusmod tempor incididunt ut labore dolore magna.</p>
+								<p>
+									At PRIMELOCUM HEALTHCARE LTD, we are committed to enhancing healthcare services by providing top-notch staffing solutions. Partner with us and experience the difference in healthcare staffing.
+</p>
 								<!-- Social -->
 								<ul class="social">
 									<li><a href="#"><i class="icofont-facebook"></i></a></li>
