--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -87,66 +87,105 @@
 		
 		<!-- Slider Area -->
 		<section class="slider">
-    <div class="hero-slider">
-        <!-- Start Single Slider -->
-        <div class="single-slider" style="background-image: url('{% static 'img/showcase-2.jpg' %}');">
-            <div class="overlays"></div> <!-- Grey overlay -->
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-7">
-                        <div class="text">
-                            <h1>We specialize in guiding healthcare professionals toward fulfilling careers. </h1>
-                            <p style="color: #fff;">
-								With precision and care, we meticulously match talent with opportunities, ensuring each step leads to success.</p>
-                            <div class="button">
-                                <a href="#" class="btn">Get Appointment</a>
-                                <a href="#" class="btn primary">Learn More</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- End Single Slider -->
-        <!-- Start Single Slider -->
-        <div class="single-slider" style="background-image: url('{% static 'img/showcase-4.jpg' %}');">
-            <div class="overlays"></div> <!-- Grey overlay -->
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-7">
-                        <div class="text">
-                            <h1>Primelocum Healthcare
-							</h1>
-							<h1>Dedicated Healthcare Staffing Solution Provider
-							</h1>
-                            <p style="color: #fff;">
-								Your trusted partner for temporary, locum, and agency staffing solutions in Operating Theatres and PACU.
-Seamlessly secure the healthcare professionals you need.</p>
-                            <div class="button">
-                                <a href="#" class="btn">Get Appointment</a>
-                                <a href="#" class="btn primary">About Us</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- End Single Slider -->
-        <!-- Start Single Slider -->
-        
-        <!-- End Single Slider -->
-    </div>
+			<div class="hero-slider">
+				<!-- Start Single Slider -->
+				<div class="single-slider" style="background-image: url('{% static 'img/showcase-2.jpg' %}');">
+					<div class="overlays"></div> <!-- Grey overlay -->
+					<div class="container">
+						<div class="row">
+							<div class="col-lg-7">
+								<div class="text">
+									<h1>We specialize in guiding healthcare professionals toward fulfilling careers. </h1>
+									<p style="color: #fff;">
+										With precision and care, we meticulously match talent with opportunities, ensuring each step leads to success.</p>
+									<div class="button">
+										<a href="#" class="btn">Get Appointment</a>
+										<a href="#" class="btn primary">Learn More</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- End Single Slider -->
+				<!-- Start Single Slider -->
+				<div class="single-slider" style="background-image: url('{% static 'img/showcase-4.jpg' %}');">
+					<div class="overlays"></div> <!-- Grey overlay -->
+					<div class="container">
+						<div class="row">
+							<div class="col-lg-7">
+								<div class="text">
+									<h1>Primelocum Healthcare
+									</h1>
+									<h1>Dedicated Healthcare Staffing Solution Provider
+									</h1>
+									<p style="color: #fff;">
+										Your trusted partner for temporary, locum, and agency staffing solutions in Operating Theatres and PACU.
+		Seamlessly secure the healthcare professionals you need.</p>
+									<div class="button">
+										<a href="#" class="btn">Get Appointment</a>
+										<a href="#" class="btn primary">About Us</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- End Single Slider -->
+				<!-- Start Single Slider -->
+				
+				<!-- End Single Slider -->
+			</div>
 		</section>
 
 		<!--/ End Slider Area -->
+		<div class="container-fluid mb-5 wow fadeIn" data-wow-delay="0.1s" style="padding: 35px; background-color: #2c2d3f;">
+			<div class="container">
+				<div class="row g-3 align-items-center">
+					<!-- Keyword Input -->
+					<div class="col-md-2">
+						<input type="text" class="form-control border-0" placeholder="Keyword" />
+					</div>
+					<!-- Category Dropdown -->
+					<div class="col-md-4">
+						<select class="form-select border-0">
+							<option selected>Category</option>
+							<option value="1">Locum Scrub Nurse Practitioner</option>
+							<option value="2">Locum Health Care Assistant Position</option>
+							<option value="3">Locum Anaesthetic Technician Position</option>
+							<option value="4">Locum Recovery Room Practitioner Position</option>
+						</select>
+					</div>
+					<!-- Location Dropdown -->
+					<div class="col-md-4">
+						<select class="form-select border-0">
+							<option selected>Location</option>
+							<option value="1">Auckland</option>
+							<option value="2">Wellington</option>
+							<option value="3">Queenstown</option>
+						</select>
+					</div>
+					<!-- Search Button -->
+					<div class="col-md-2">
+						<button class="btn btn-dark border-0 w-100">Search</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		
+
+		
+		
+		
+        <!-- Search End -->
+		
 		
 		<!-- Start Schedule Area -->
-		<section class="schedule">
+		<!-- <section class="schedule">
 			<div class="container">
 				<div class="schedule-inner">
 					<div class="row">
 						<div class="col-lg-3 col-md-6 col-12">
-							<!-- single-schedule -->
 							<div class="single-schedule first">
 								<div class="inner">
 									<div class="icon">
@@ -160,7 +199,6 @@ Seamlessly secure the healthcare professionals you need.</p>
 							</div>
 						</div>
 						<div class="col-lg-3 col-md-6 col-12">
-							<!-- single-schedule -->
 							<div class="single-schedule first">
 								<div class="inner">
 									<div class="icon">
@@ -174,7 +212,6 @@ Seamlessly secure the healthcare professionals you need.</p>
 							</div>
 						</div>
 						<div class="col-lg-3 col-md-6 col-12">
-							<!-- single-schedule -->
 							<div class="single-schedule middle">
 								<div class="inner">
 									<div class="icon">
@@ -188,7 +225,6 @@ Seamlessly secure the healthcare professionals you need.</p>
 							</div>
 						</div>
 						<div class="col-lg-3 col-md-12 col-12">
-							<!-- single-schedule -->
 							<div class="single-schedule last">
 								<div class="inner">
 									<div class="icon">
@@ -205,7 +241,7 @@ Seamlessly secure the healthcare professionals you need.</p>
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 		
 		<!--/End Start schedule Area -->
 
@@ -226,7 +262,6 @@ Seamlessly secure the healthcare professionals you need.</p>
 				</div>
 				<div class="row">
 					<div class="col-lg-3 col-12">
-						<!-- Start Single features -->
 						<div class="single-features">
 							<div class="signle-icon">
 								<i class="icofont icofont-ambulance-cross"></i>
@@ -234,10 +269,8 @@ Seamlessly secure the healthcare professionals you need.</p>
 							<h3>Scrub Nurse</h3>
 							<p>Lorem ipsum sit, consectetur adipiscing elit. Maecenas mi quam vulputate.</p>
 						</div>
-						<!-- End Single features -->
 					</div>
 					<div class="col-lg-3 col-12">
-						<!-- Start Single features -->
 						<div class="single-features">
 							<div class="signle-icon">
 								<i class="icofont icofont-medical-sign-alt"></i>
@@ -245,10 +278,8 @@ Seamlessly secure the healthcare professionals you need.</p>
 							<h3>Health Care Assistant</h3>
 							<p>Lorem ipsum sit, consectetur adipiscing elit. Maecenas mi quam vulputate.</p>
 						</div>
-						<!-- End Single features -->
 					</div>
 					<div class="col-lg-3 col-12">
-						<!-- Start Single features -->
 						<div class="single-features">
 							<div class="signle-icon">
 								<i class="icofont icofont-stethoscope"></i>
@@ -256,10 +287,8 @@ Seamlessly secure the healthcare professionals you need.</p>
 							<h3>Recovery Room Practitioner</h3>
 							<p>Lorem ipsum sit, consectetur adipiscing elit. Maecenas mi quam vulputate.</p>
 						</div>
-						<!-- End Single features -->
 					</div>
 					<div class="col-lg-3 col-12">
-						<!-- Start Single features -->
 						<div class="single-features last">
 							<div class="signle-icon">
 								<i class="icofont icofont-stethoscope"></i>
@@ -267,7 +296,6 @@ Seamlessly secure the healthcare professionals you need.</p>
 							<h3>Anaesthetic Technician</h3>
 							<p>Lorem ipsum sit, consectetur adipiscing elit. Maecenas mi quam vulputate.</p>
 						</div>
-						<!-- End Single features -->
 					</div>
 				</div>
 			</div>
