--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -143,26 +143,26 @@
 			<div class="container">
 				<div class="row g-3 align-items-center">
 					<!-- Keyword Input -->
-					<div class="col-md-2">
+					<div class="col-md-3">
 						<input type="text" class="form-control border-0" placeholder="Keyword" />
 					</div>
 					<!-- Category Dropdown -->
-					<div class="col-md-4">
+					<div class="col-md-3">
 						<select class="form-select border-0">
 							<option selected>Category</option>
-							<option value="1">Locum Scrub Nurse Practitioner</option>
-							<option value="2">Locum Health Care Assistant Position</option>
-							<option value="3">Locum Anaesthetic Technician Position</option>
-							<option value="4">Locum Recovery Room Practitioner Position</option>
+							<option value="Scrub Nurse Practitioner">Scrub Nurse Practitioner</option>
+							<option value="Health Care Assistant Position">Health Care Assistant Position</option>
+							<option value="Anaesthetic Technician Position">Anaesthetic Technician Position</option>
+							<option value="Recovery Room Practitioner Position">Recovery Room Practitioner Position</option>
 						</select>
 					</div>
 					<!-- Location Dropdown -->
 					<div class="col-md-4">
 						<select class="form-select border-0">
 							<option selected>Location</option>
-							<option value="1">Auckland</option>
-							<option value="2">Wellington</option>
-							<option value="3">Queenstown</option>
+							<option value="Auckland">Auckland</option>
+							<option value="Wellington" disabled>Wellington</option>
+							<option value="Queenstown" disabled>Queenstown</option>
 						</select>
 					</div>
 					<!-- Search Button -->
