Added Navigation logic

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -466,7 +466,7 @@
 		<!--/Ens clients -->
 		
 		<!-- Start Appointment -->
-		<section class="appointment">
+		<section class="appointment" id="contactus">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
