--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -4,7 +4,7 @@
 
 <!-- Hero Image Section -->
 <div class="hero-section position-relative">
-    <img src="{% static 'img/blog1.jpg' %}" alt="Hero Image" class="img-fluid w-100" style="height: 400px; object-fit: cover;">
+    <img src="{% static 'img/abouthero.jpg' %}" alt="Hero Image" class="img-fluid w-100" style="height: 400px; object-fit: cover;">
 
 </div>
 
