--- a/templates/base.html
+++ b/templates/base.html
@@ -71,7 +71,7 @@
 
 /* General Container Styling */
 .container-fluid.bg-primary {
-    background-color: #007bff !important;
+    background-color: #f2f9d8 !important;
     padding: 35px 0;
     margin-bottom: 5rem;
 }
@@ -166,7 +166,57 @@
 				}
 			}
 
-			
+		.faq-section {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 40px 20px;
+        }
+        .faq-section h2 {
+            font-size: 1.2rem;
+            font-weight: bold;
+            margin-bottom: 30px;
+            text-align: left;
+            color: #61CE70;
+        }
+        .accordion-item {
+            margin-bottom: 15px;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        .accordion-header {
+            background-color: #ffffff;
+            color: #000;
+            font-size: 1.2rem;
+            font-weight: 500;
+            padding: 15px 20px;
+            border-radius: 8px;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            transition: background-color 0.3s ease;
+        }
+        /* .accordion-header:hover {
+            background-color: #f1f1f1;
+        } */
+        .accordion-header .fa {
+            color: #61CE70;
+            transition: transform 0.3s ease;
+        }
+        .accordion-header.collapsed .fa-chevron-down {
+            transform: rotate(0deg);
+        }
+        .accordion-header:not(.collapsed) .fa-chevron-down {
+            transform: rotate(-180deg);
+        }
+        .accordion-body {
+            font-size: 1rem;
+            line-height: 1.6;
+            padding: 20px;
+            background-color: #f9f9f9;
+            border-top: 1px solid #ddd;
+        }
 
 		</style>
 		
