--- a/templates/joblists/index.html
+++ b/templates/joblists/index.html
@@ -57,7 +57,7 @@
                             <div class="col-sm-12 col-md-8 d-flex align-items-center">
                                 <img class="flex-shrink-0 img-fluid border rounded" src="https://primelocum.co.nz/wp-content/uploads/2024/03/job-image6-2.png" alt="" style="width: 80px; height: 80px;">
                                 <div class="text-start ps-4">
-                                    <h5 class="mb-3">MLOCUM Health Care Assistant Position</h5>
+                                    <h5 class="mb-3">LOCUM Health Care Assistant Position</h5>
                                     <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>Auckland</span>
                                     <span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i>Full Time</span>
                                     <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>$123 - $456</span>
