--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -36,7 +36,7 @@
                     <div class="col-lg-3 col-md-3 col-12">
                         <!-- Start Logo -->
                         <div class="logo">
-                            <a href="{% url 'index' %}"><img src="{% static 'img/LOGO2.png'%}" alt="#"></a>
+                            <a href="{% url 'profiles' %}"><img src="{% static 'img/LOGO2.png'%}" alt="#"></a>
                             <!-- <a href="index.html"><img src="https://primelocum.co.nz/wp-content/uploads/2024/03/Dark-Green-and-Lime-Green-Modern-Gradient-Doctor-Health-Logo-272-x-60-px.svg" alt="#"></a> -->
 
                         </div>
@@ -77,7 +77,17 @@
                                     >
                                     <a href="{% url 'joblists' %}">Jobs </a></li>
 
-                                    <li><a href="#">Candidate </a></li>
+                                    <li
+                                        {% if 'users' in request.path %}
+                                                class="active"
+                                            {% else %}
+                                                class=""
+                                            {% endif %}
+                                    
+                                    >
+                                    <a href="{% url 'profiles' %}">Candidate </a></li>
+                                    
+                                    
                                     <li
                                             {% if 'faq' in request.path %}
                                             class="active"
@@ -86,7 +96,7 @@
                                         {% endif %}
                                     >
                                     <a href="{% url 'faq' %}">Faq </a></li>
-                                    <li><a href="#contactus">Contact Us </a></li>
+                                    <!-- <li><a href="#contactus">Contact Us </a></li> -->
 
 
 
@@ -107,8 +117,17 @@
                         <!--/ End Main Menu -->
                     </div>
                     <div class="col-lg-2 col-12">
-                        <div class="get-quote">
+                        
+                        <!-- <div class="get-quote">
                             <a href="appointment.html" class="btn">Hire Top Talent</a>
+                        </div> -->
+                        <div class="get-quote">
+                            {% if request.user.is_authenticated %}
+                            <a href="{% url 'logout' %}" class="btn">Logout</a>
+                            {% else %}
+                            <a href="{% url 'login' %}" class="btn">Log In / Register</a>
+                            {% endif %}
+
                         </div>
                     </div>
                 </div>
