--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -121,7 +121,7 @@
                         <!-- <div class="get-quote">
                             <a href="appointment.html" class="btn">Hire Top Talent</a>
                         </div> -->
-                        <div class="get-quote">
+                        <div class="" style="margin-top: 12px;">
                             {% if request.user.is_authenticated %}
                             <a href="{% url 'logout' %}" class="btn">Logout</a>
                             {% else %}
